# Ophelia

./: .gitignore  .gitmodules  CITATION.cff  CITATION.txt  IK_1.xlsx  README.md  Report.md  UsedTopic.md  info_progetto.md
ophelia/devel/: .catkin  .rosinstall  setup.sh
ophelia/devel/lib/pkgconfig/: ophelia_description.pc  ophelia_movit_config.pc  ophelia_single.pc
ophelia/devel/share/ophelia_description/cmake/: ophelia_descriptionConfig.cmake
ophelia/devel/share/ophelia_movit_config/cmake/: ophelia_movit_configConfig.cmake
ophelia/devel/share/ophelia_single/cmake/: ophelia_singleConfig.cmake
ophelia/src/hls_lfcd_lds_driver-master/applications/lds_driver/: lds_driver
ophelia/src/moveit_ophelia/: CMakeLists.txt
ophelia/src/moveit_ophelia/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ophelia_description.srdf  ros_controllers.yaml
ophelia/src/moveit_ophelia/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  moveit.rviz  planning_context.launch  planning_pipeline.launch.xml  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ophelia/src/ophelia_description/: CMakeLists.txt  package.xml
ophelia/src/ophelia_description/config/: joint_names_ophelia_description.yaml
ophelia/src/ophelia_description/launch/: .display.launch.swp  display.launch  gazebo.launch  play.launch
ophelia/src/ophelia_description/meshes/: anca_dx_3.STL  anca_sx_3.STL  femore_dx_1.STL  femore_dx_2.STL  femore_sx_1.STL  femore_sx_2.STL  tibia_sx_2.STL
ophelia/src/ophelia_description/rviz_config/: ophelia_config.rviz
ophelia/src/ophelia_description/scripts/: HexaMove.cpp  ada.py  cerebellum.py  check_distance.py  controller copy.py  controller.py  dictionary.py  joint.py  keyboard_controller.py  listener.py  movements.py  ophelia.py  ophelia_main.py  ophelia_main2.py  play.py  pub_joint.py  traiettoria.py
ophelia/src/ophelia_description/scripts/keyboard/examples/: pressed_keys.py
ophelia/src/ophelia_description/src/: HexaMove.cpp
ophelia/src/ophelia_description/urdf/: ophelia_description.csv  ophelia_description.urdf
src/moveit_ophelia/: .setup_assistant
src/moveit_ophelia/config/: ompl_planning.yaml
src/moveit_ophelia/launch/: demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  ophelia_description_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch
src/ophelia_bringup/: CMakeLists.txt  package.xml
src/ophelia_bringup/launch/: ophelia_remote.launch
src/ophelia_bringup/launch/includes/: description.launch.xml
src/ophelia_description/: CMakeLists.txt  package.xml
src/ophelia_description/gazebo_urdf/: ophelia.urdf
src/ophelia_description/launch/: display.launch  hw_launcher.launch  play.launch
src/ophelia_description/meshes/: anca_dx_1.STL  anca_sx_1.STL  anca_sx_2.STL  femore_dx_3.STL  femore_sx_3.STL  tibia_dx_1.STL
src/ophelia_description/msg/: LegPos.msg
src/ophelia_description/scripts/: cerebellum.py  check_distance.py  move_base_to_joy.py  movements.py  offset.yaml  ophelia.py  send_to_adafruit.py  send_to_raspi.py
src/ophelia_description/src/: HexaMove.cpp
src/ophelia_description/urdf/: ophelia_description.gv  ophelia_description.urdf
src/ophelia_navigation/: CMakeLists.txt  demo_ophelia_navigation.launch  package.xml
src/ophelia_navigation/launch/: move_base.launch  ophelia_navigation.launch
src/ophelia_syropod/: CMakeLists.txt  LICENSE  package.xml
src/ophelia_syropod/config/: auto_pose.yaml  ophelia.yaml  ophelia_motors.yaml
src/ophelia_syropod/launch/: ophelia_highlevel.launch
step/: Femore v11.step  Snodo v5.step  Snodo_XS v2.step  Snodo_XS v4.step  Tibia v7_DX.step  Tibia_DX v0.step  Tibia_DX v1.step  Tibia_DX.step  Tibia_SX.step
steps/: Femore v11.step  Snodo v5.step  Snodo_XS v2.step  Snodo_XS v4.step  Tibia v7_DX.step  Tibia_DX v0.step  Tibia_DX v1.step  Tibia_DX.step  Tibia_SX.step
