<?xml version="1.0"?>
<package format="2">
  <name>ophelia_navigation</name>
  <version>1.2.5</version>
  <description>
    The ophelia_navigation provides roslaunch scripts for starting the navigation.
  </description>
  <license>Apache 2.0</license>
  <author>Stoppini</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
</package>
